--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 					<p class="text-title-company">BorrowWorks</p>
 				</div>
 				<div class="col">
-					<img src="assets/govtech-logo-blue.svg" alt="Company Logo">
+					<img src="assets/BW_Horizontal_Color.png" alt="BorrowWorks Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:preston@data.gov.sg">
+		<a href="mailto:jeff.forsey@borrowworks.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
