--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="preston.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="Jeff_Forsey.jpg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -30,7 +30,7 @@
 					<p class="text-title-company">BorrowWorks</p>
 				</div>
 				<div class="col">
-					<img src="assets/BW_Horizontal_Color.png" alt="BorrowWorks Logo">
+					<img src="BW_Horizontal_Color.png" alt="BorrowWorks Logo">
 				</div>
 			</div>
 		</div>
