--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com.sg/maps/place/GovTech+Hive/@1.2998708,103.7871504,17z/
-		data=!3m1!4b1!4m5!3m4!1s0x31da1a457344a501:0x2202a995a6abc728!8m2!3d1.2998708!4d103.7893391">
+		<a href="https://www.google.com/maps/place/Harris+Pkwy,+Fort+Worth,+TX+76132/@32.655982,-97.420806,17z/data=!3m1!4b1!4m5!3m4!1s0x864e6d3f9a0dc47d:0x5b0ba8b538c4f780!8m2!3d32.655977!4d-97.418617">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
